fix: dark mode flickering by using native css vars

--- a/website/src/styles/globals.css
+++ b/website/src/styles/globals.css
@@ -189,14 +189,9 @@ mark.noogle-marker {
 
 
 code  {
-  /* padding: 0.3rem; */
   background-color: #f0f1f2;
 }
 pre {
-  /* padding: 0.3rem; */
-  background-color: #f0f1f2;
-}
-code.hljs  {
   background-color: #f0f1f2;
 }
 
